테스트 : Sonarqube 분석에 따른 이슈 해결
1. 테스트 커버리지 개선
2. 코드 최적화